<resources>
    <string name="app_name">Note App KB</string>
    <string name="icon_point">Icon point</string>
    <string name="good_morning">Good Morning,</string>
    <string name="dummy_name">Rizky</string>
    <string name="dashboard">Dashboard</string>
    <string name="balance">Balance</string>
    <string name="dummy_balance">250.000 IDR</string>
    <string name="recent_transaction">Recent transaction</string>
    <string name="dummy_date">29 Januari 2023</string>
    <string name="dummy_total">- Rp 10.000</string>
    <string name="dummy_type">Expenses</string>
    <string name="dummy_transaction_name">Boba</string>
    <string name="add_new">New Payment + </string>
    <string name="note_bottom_sheet">Note Bottom Sheet</string>
    <string name="transaction_name">Transaction name </string>
    <string name="total_transaction">Total transaction</string>
    <string name="select_type">Select type</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="fill_data_first">Fill data first</string>
</resources>