<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingVertical="10dp"
    android:background="@android:color/transparent"
    android:paddingHorizontal="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="40dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/icon_point"
            android:src="@drawable/ic_profile" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvGreeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_morning"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvNotification"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/orange_600"
        app:cardCornerRadius="40dp">

        <ImageView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/icon_point"
            android:src="@drawable/ic_notification_white" />
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>