<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginTop="14dp"
                android:text="@string/recent_transaction"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_acc_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/background_text_edit_text"
                android:focusable="false"
                android:hint="@string/transaction_name"
                android:textColorHint="@color/grey_400"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_acc_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_acc_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/background_text_edit_text"
                android:focusable="false"
                android:hint="@string/total_transaction"
                android:textColorHint="@color/grey_400"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_acc_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="number"
                    android:paddingStart="18dp"
                    android:paddingEnd="18dp"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llcSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"

                android:background="@drawable/background_text_edit_text"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="14dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSelected"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_type"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_arrow_down_black" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSelect"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_item_selection" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                >

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:padding="10dp"
                    android:layout_marginEnd="20dp"
                    android:textColor="@android:color/holo_red_dark" />

                <TextView
                    android:id="@+id/tvConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:padding="10dp"
                    android:textColor="@color/orange" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>