<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".presentation.MainActivity">

    <include
        android:id="@+id/iToolbar"
        layout="@layout/view_toolbar" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iToolbar">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/Theme.NoteAppKB"
            app:elevation="0dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_menu" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:textColor="@color/white"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/tvBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/dummy_balance"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_round_corner"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="10dp"
                android:paddingVertical="14dp"
                app:layout_anchor="@id/appBarLayout"
                app:layout_anchorGravity="bottom|center_horizontal">

                <View
                    android:layout_width="120dp"
                    android:layout_height="10dp"
                    android:alpha="0.4"
                    android:background="@drawable/rounded_view_soft_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="14dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/recent_transaction"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMain"
                    android:layout_width="match_parent"
                    android:layout_height="550dp"
                    android:layout_marginTop="10dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    tools:listitem="@layout/list_recent_transaction" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcNewPayment"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_view_orange"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/icon_point"
            android:src="@drawable/ic_scan" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:text="@string/add_new"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>